package com.primefuel.fulltank.platform.shared.interfaces.rest.resources;

public record MessageResource(String message) {
}
